# PBC

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
src/: client.cpp  client.h  client_test.cpp  common.cpp  common.h  errors.h  main.cpp  server.cpp  server.h  server_test.cpp
